add messages email

--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -3,15 +3,14 @@
 {% block content %}
 
 {% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
+  <p>Такой пары пользователь/пароль не существует.</p>
 {% endif %}
 
 {% if next %}
   {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
+    <p>У вашей учётной записи нет доступа к этой странице.</p>
   {% else %}
-    <p>Please login to see this page.</p>
+    <p>Пожалуйста, войдите для посмотра этой страницы</p>
   {% endif %}
 {% endif %}
 
@@ -33,7 +32,8 @@
 <input type="submit" value="login" />
 <input type="hidden" name="next" value="{{ next }}" />
   {# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="{% url 'password_reset' %}">Забыли пароль?</a></p>
+<p><a href="{% url 'signup' %}">Зарегистрироваться</a></p>
 </form>
 
 {% endblock %}
