--- a/home/templates/registration/password_reset_email.html
+++ b/home/templates/registration/password_reset_email.html
@@ -1,5 +1,2 @@
-{% extends "home/wrapper.html" %}
-{% block content %}
-Someone asked for password reset for email {{ email }}. Follow the link below:
+Чтобы сменить пароль для аккаунта {{ email }}. Используйте эту одноразовую ссылку:
 {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
-{% endblock %}
