--- a/home/templates/registration/logged_out.html
+++ b/home/templates/registration/logged_out.html
@@ -1,7 +1,7 @@
 {% extends "home/wrapper.html" %}
 
 {% block content %}
-<p>Logged out!</p>
+<p>Вы вышли с учётной записи!</p>
 
 <a href="{% url 'login'%}">Click here to login again.</a>
 {% endblock %}
