--- a/home/templates/registration/password_reset_done.html
+++ b/home/templates/registration/password_reset_done.html
@@ -1,4 +1,4 @@
 {% extends "home/wrapper.html" %}
 {% block content %}
-<p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
+<p>На вашу почту отправлено письмо с ссылкой, перейдите по ней для изменения пароля</p>
 {% endblock %}
