--- a/home/templates/registration/signup.html
+++ b/home/templates/registration/signup.html
@@ -11,7 +11,7 @@
     {{ form.email }}<br><br>
     {{ form.password1 }}<br><br>
     {{ form.password2 }}<br><br>
-    <span>{{ error }}</span>
+    <span id="error_span">{{ error }}</span><br>
     <button type="submit">Зарегистрироваться!</button>
   {% endif %}
 </form>
