--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -3,7 +3,8 @@
 {% load static %}
 {% block content %}
     <h3>{{ my_car }}</h3>
-    <img src="{% static 'images/home/home_page.jpg'%}" >
-    <block class="text_content">
-        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cupiditate ex inventore ipsa labore maxime molestias praesentium quaerat repudiandae vitae.</span>
+    <tr>
+        <td><img src="{% static 'images/home/home_page.jpg'%}" ></td>
+        <td><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cupiditate ex inventore ipsa labore maxime molestias praesentium quaerat repudiandae vitae.</span></td>
+    </tr>
 {% endblock %}
