--- a/home/templates/registration/password_reset_confirm.html
+++ b/home/templates/registration/password_reset_confirm.html
@@ -2,30 +2,14 @@
 
 {% block content %}
 
-    {% if validlink %}
         <p>Пожалуйста, введите новый пароль.</p>
         <form action="" method="post">
             {% csrf_token %}
-            <table>
-                <tr>
-                    <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">Новый пароль:</label></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Подтверждение:</label></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Изменить пароль" /></td>
-                </tr>
-            </table>
+            {{form.password1}}<br>
+            {{form.password2}}<br>
+            {{form.code}}<br>
+            {{error}}<br>
+            <input type="submit" class="btn btn-default btn-lg" value="Сменить пароль" />
         </form>
-    {% else %}
-        <h1>Ошибка доступа</h1>
-        <p>Эта ссылка недействительна</p>
-    {% endif %}
 
 {% endblock %}
