--- a/home/templates/registration/password_reset_form.html
+++ b/home/templates/registration/password_reset_form.html
@@ -2,9 +2,9 @@
 {% block content %}
 
 <form action="" method="post">{% csrf_token %}
-    {% if form.email.errors %} {{ form.email.errors }} {% endif %}
         <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password" />
+        <span>{{error}}</span>
+    <input type="submit" class="btn btn-default btn-lg" value="Сменить пароль" />
 </form>
 
 {% endblock %}
