--- a/accounts/templates/registration/signup.html
+++ b/accounts/templates/registration/signup.html
@@ -4,7 +4,7 @@
 
 
 <div class="add_name">
-    <h1>Регистрация</h1>
+    <h1 class="head_text">Регистрация</h1>
 <form method="POST">
     {% csrf_token %}
     <div class="form-group">
