--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -4,7 +4,7 @@
 {% block content %}
     <h3>{{ my_car }}</h3>
     <tr>
-        <td><img src="{% static 'images/home/home_page.jpg'%}" ></td>
+        <td><img class="home_img" src="{% static 'images/home/home_page.jpg'%}" ></td>
         <td><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cupiditate ex inventore ipsa labore maxime molestias praesentium quaerat repudiandae vitae.</span></td>
     </tr>
 {% endblock %}
