--- a/about/templates/about/about_page.html
+++ b/about/templates/about/about_page.html
@@ -1,7 +1,8 @@
 {% extends 'home/wrapper.html' %}
 {% block title %}Информация {% endblock %}
 {% block content %}
+<div class="col-xl-12 col-md-12">
     <h3>Информация </h3>
     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut culpa incidunt sequi sunt vitae. Alias cupiditate, ea eaque, eius eligendi nam perspiciatis possimus quam quibusdam repellendus sit tempore? Deserunt dolor harum in porro velit voluptatem! Amet blanditiis consequatur deserunt, dicta ex hic illum, ipsa maiores, maxime neque quae quas ullam.</span>
-
+</div>
 {% endblock %}
